--- a/website/src/pages/styles.module.css
+++ b/website/src/pages/styles.module.css
@@ -9,7 +9,7 @@
   text-align: center;
   position: relative;
   overflow: hidden;
-  background-image: url(/img/untold-stories.png);
+  background-image: none;
 }
 
 @media screen and (max-width: 966px) {
